tests/macros/duplicate/message.stderr
error: duplicate option `message`
 --> $DIR/message.rs:4:9
  |
4 |         message: todo!(),
  |         ^^^^^^^
