tests/macros/duplicate/message.rs
fn main() {
    let q = inquisition::questions![input {
        message: todo!(),
        message: todo!(),
    }];
}
